# LowLevelMetal

./: .clangd  .gitignore  App.cpp  App.h  ApplicationState.cpp  ApplicationState.h  Benchmark.cpp  Benchmark.h  CMakeLists.txt  InputHandler.cpp  InputHandler.h  InputMTKView.h  InputMTKView.mm  Math.h  Mesh.h  MeshLoader.h  MyAppDelegate.cpp  MyAppDelegate.h  MyMTKViewDelegate.cpp  MyMTKViewDelegate.h  MyUtility.cpp  MyUtility.h  README.md  RenderDataManager.cpp  RenderDataManager.h  Renderer.h  Renderer.mm  ShaderTypes.h  main.cpp
metal-cmake/: definition.cpp
shaders/: basic_shader.metal
